add DAO function

--- a/KaraokePayment/KaraokePayment/Views/Shared/_Layout.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Shared/_Layout.cshtml
@@ -23,7 +23,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CaLVs" asp-action="Index">CaLV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HangHoas" asp-action="Index">HangHoa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Phongs" asp-action="Index">Phong</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NhanVienCaLVs" asp-action="Index">NhanVienCaLV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookPhongOrderPhong" asp-action="Index">BookPhongOrderPhong</a>
                         </li>
                     </ul>
                 </div>
