get phong da book

--- a/KaraokePayment/KaraokePayment/Views/Shared/_Layout.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Phongs" asp-action="Index">Phong</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Phongs" asp-action="GetPhongDaBook">GetPhongDaBook</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="NhanVienCaLVs" asp-action="Index">NhanVienCaLV</a>
                         </li>
                         <li class="nav-item">
