--- a/KaraokePayment/KaraokePayment/Views/Shared/_Layout.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Shared/_Layout.cshtml
@@ -38,7 +38,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="NhanVienCaLVs" asp-action="Index">NhanVienCaLV</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="BookPhongOrderPhong" asp-action="Index">BookPhongOrderPhong</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookPhongOrders" asp-action="Index">BookPhongOrder</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookPhongOrderPhongs" asp-action="Index">BookPhongOrderPhong</a>
                         </li>
                     </ul>
                 </div>
