--- a/KaraokePayment/KaraokePayment/Views/BookPhongOrderPhongs/Index.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/BookPhongOrderPhongs/Index.cshtml
@@ -85,7 +85,7 @@
             @Html.DisplayFor(modelItem => item.BookPhongOrder.Id)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Phong.Id)
+            @Html.DisplayFor(modelItem => item.Phong.TenPhong)
         </td>
         <td>
             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
